Add new endpoints and fix bugs
